--- a/src/Components/Body/style.css
+++ b/src/Components/Body/style.css
@@ -65,6 +65,7 @@ body {
     display: flex;
     /* Add this to make child elements flex items */
     position: relative;
+    background-color: red;
 
 }
 
@@ -80,9 +81,11 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
+    background-color: blueviolet;
 }
 
 .Roi2 {
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,6 +93,8 @@ body {
 }
 
 .row {
+    background-color: gray;
+    margin-left: 5vw;
     width: 50%;
     height: 30vw;
     display: flex;
@@ -98,9 +103,23 @@ body {
     border-top: 1.2vw solid rgb(191, 155, 111);
     border-left: 1.2vw solid rgb(191, 155, 111);
     border-right: 1.2vw solid rgb(191, 155, 111);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.foto{
+    width: 100%;
+    height: 50%;
+    margin-top: 6vw;
+}
+
+.foto img{
+    width: 100%;
+    height: 100%;
+}
 .row2 {
+    margin-right: 5vw;
     width: 50%;
     height: 30vw;
     border-top-left-radius: 20vw;
@@ -108,12 +127,78 @@ body {
     border-top: 1.2vw solid rgb(191, 155, 111);
     border-left: 1.2vw solid rgb(191, 155, 111);
     border-right: 1.2vw solid rgb(191, 155, 111);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cont{
+    margin-top: 4vw;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.welc{
+    width: 60%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1vw;
+    position: relative;
+}
+
+.welc h1{
+    width: 100%;
+    font-size: 2vw;
+    color: white;
+    font-family: "Neuton", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+.parag{
+    width: 94%;
+    height: 60%;
+    margin-top: 1vw;
+    position: relative;
+}
+.parag p{
+    font-size: 0.9vw;
+    text-align: center;
+    font-family: "Bentham", serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+}
+
+.comeOn{
+    width: 94%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.comeOn h2{
+    width: 100%;
+    font-size: 1.5vw ;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+  
 }
 
 .Paty3{
     width: 100%;
     height: 6vw;
     display: flex;
+    background-color: green;
 }
 
 .foot1, .foot2{
@@ -122,15 +207,16 @@ body {
 
 .foot1{
     display: flex;
+    background-color: pink;
 }
 .foot2{
     display: flex;
 }
 
 .pe{
-    margin-left: 10.1vw;
+    margin-left: 12.6vw;
     width: 10%;
-    height: 80%;
+    height: 50%;
     border-bottom: 1.2vw solid rgb(191, 155, 111);
     border-left: 1.2vw solid rgb(191, 155, 111);
     border-right: 1.2vw solid  rgb(191, 155, 111);
@@ -144,16 +230,16 @@ body {
 
 .pe2{
     width: 10%;
-    height: 80%;
+    height: 50%;
     border-bottom: 1.2vw solid rgb(191, 155, 111);
     border-left: 1.2vw solid rgb(191, 155, 111);
     border-right: 1.2vw solid  rgb(191, 155, 111);
 }
 
 .pe3{
-    margin-left: 10.1vw;
+    margin-left: 7.6vw;
     width: 10%;
-    height: 80%;
+    height: 50%;
     border-bottom: 1.2vw solid rgb(191, 155, 111);
     border-left: 1.2vw solid rgb(191, 155, 111);
     border-right: 1.2vw solid  rgb(191, 155, 111);
@@ -161,7 +247,7 @@ body {
 
 .pe4{
     width: 10%;
-    height: 80%;
+    height: 50%;
     border-bottom: 1.2vw solid rgb(191, 155, 111);
     border-left: 1.2vw solid rgb(191, 155, 111);
     border-right: 1.2vw solid  rgb(191, 155, 111);
@@ -186,10 +272,14 @@ body {
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
   }
   
   .photo{
     width: 25%;
-    height: 80%;
+    height: 75%;
+  }
+
+  .photo img{
+    
+    height: 100%;
   }
